force-app/main/default/objects/Training_Resource__c/Training_Resource__c.object-meta.xml
<CustomObject>
    <description>Junction object to create many to many relationship between employees and resources.</description>
    <label>Training Resource</label>
    <nameField>
        <displayFormat>TRS-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>